contact page image jumping and nav bar bug fixes

--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -155,6 +155,7 @@
 				display: inline-block;
 				width: 242px;
 				height: 405px;
+				min-width: 242px;
 				margin-right: 50px;
 				border-radius: 3px;
 			}
